Clean commit without DB dumps